WP-6191: fix comma wrapping issue.

--- a/css/style.css
+++ b/css/style.css
@@ -7098,12 +7098,10 @@ ul.slideshow-items {
   padding-bottom: 10px;
 }
 .pane-admission-events-location-panel-pane .acc-body {
-  overflow: hidden;
-  *zoom: 1;
+  padding-left: 36px;
 }
-.pane-admission-events-location-panel-pane .acc-body span {
-  display: block;
-  float: left;
+.pane-admission-events-location-panel-pane .acc-body .separator-comma {
+  margin-left: -5px;
 }
 
 .qtip-wrapper ol,
