--- a/sass/partials/design/_accordion.sass
+++ b/sass/partials/design/_accordion.sass
@@ -90,7 +90,6 @@
 
   // Fix for commas
   .acc-body
-    +clearfix
-    span
-      display: block
-      float: left
+    padding-left: 36px
+    .separator-comma
+      margin-left: -5px
